--- a/erp-seo-pos.html
+++ b/erp-seo-pos.html
@@ -493,7 +493,7 @@
           <div class="choose_us_container  grid gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 ">
             <!-- single card -->
             <div
-              class="bg-white	border-radius-18 single_choose_us  py-9.5 lg:pb-12.6 px-4 lg:px-9.5 card cursor-pointer relative">
+              class="blue_gradient_34	border-radius-18 single_choose_us  py-9.5 lg:pb-12.6 px-4 lg:px-9.5 card cursor-pointer relative">
               <div class="w-17.3 mx-auto ">
                 <img class="storage_icon" src="./assets/img/erp-page-img/erp.png" alt="erp-icon">
               </div>
@@ -521,7 +521,7 @@
             </div>
             <!-- single card -->
             <div
-              class="bg-white	border-radius-18 single_choose_us  py-9.5 lg:pb-12.6 px-4 lg:px-9.5 card cursor-pointer relative">
+              class="blue_gradient_33 	border-radius-18 single_choose_us  py-9.5 lg:pb-12.6 px-4 lg:px-9.5 card cursor-pointer relative">
               <div class="w-17.3 mx-auto ">
                 <img class="storage_icon" src="./assets/img/erp-page-img/seo.png" alt="seo-icon">
               </div>
@@ -552,7 +552,7 @@
 
             <!-- single card -->
             <div
-              class="bg-white	border-radius-18 single_choose_us py-9.5 lg:pb-12.6 px-4 lg:px-9.5 lg:pt-12.5 card cursor-pointer">
+              class="blue_gradient_32	border-radius-18 single_choose_us py-9.5 lg:pb-12.6 px-4 lg:px-9.5 lg:pt-12.5 card cursor-pointer">
               <div class="w-17.3  mx-auto ">
                 <a href="./pos.html"><img class="pos_icon" src="./assets/img/erp-page-img/pos-terminal.png"
                     alt="pos-icon"></a>
