--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home</title>
   <link rel="icon" type="image/png" href="./assets/img/logo/favicon.png" />
-
   <meta name="title" content="BongoIT Limited | Your Digital Partner">
   <meta name="description" content="Our company provides all types of digital service with information technology expert,Bongo IT Limited is Bangladesh UK USA based Software company Doing Highly qualitative Development,
   Software development, Web development, web design, SEO,UI/UX, UIUX, Graphics Digital Marketing">
@@ -26,19 +25,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./assets/JS/tailwind.config.js"></script>
-
-
 
   <!-- animated css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- aos cdn link -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+  <!-- swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
-
+  <!-- custom css -->
   <link rel="stylesheet" href="./assets/CSS/global.css" />
   <link rel="stylesheet" href="./assets/CSS/main.css" />
   <link rel="stylesheet" href="./assets/CSS/responsive.css" />
@@ -770,7 +769,7 @@
             <div class="profile_container blue_gradient_bg p-4  card cursor-pointer ">
               <img class="profile_icon" src="./assets/img/home_img/special_icon/clients.png" alt="client-icon" />
               <h4 class="mt-4 text-center font-bold text-dark-500 text-21 md:text-28 ">
-                <span class="counter-value" data-count="800"> 50</span> <span class="plus_symble">+</span>
+                <span class="counter-value" data-count="200"> 50</span> <span class="plus_symble">+</span>
               </h4>
 
               <p class="text-center font-normal sm:text-sm  md:text-lg text-dark-600 mt-2">
@@ -810,7 +809,7 @@
             <div class="profile_container sky_gradient_bg p-4  card cursor-pointer">
               <img class="profile_icon" src="./assets/img/home_img/special_icon/amazing.png" alt="client-icon" />
               <h4 class="mt-4 text-center font-bold text-dark-500 text-21 md:text-28 ">
-                <span class="counter-value" data-count="200">0</span> <span class="plus_symble">+</span>
+                <span class="counter-value" data-count="800">0</span> <span class="plus_symble">+</span>
               </h4>
               <p class="text-center font-normal sm:text-sm  md:text-lg text-dark-600 mt-2">
                 Our amazing products
@@ -1129,7 +1128,7 @@
 
 
   <!-- jquery cdn-->
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <!-- swiperjs cdn -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./assets/JS/index.js"></script>
