--- a/website_design_and_dev.html
+++ b/website_design_and_dev.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./assets/JS/tailwind.config.js"></script>
 
@@ -34,7 +36,7 @@
     <nav class="header_container">
       <!-- logo -->
       <a href="./index.html" class="logo w-38.7 xssm:w-44.2">
-        <img src="./assets/img/logo/bongoit_logo.svg" alt="">
+        <img src="./assets/img/logo/logo.png" alt="bongoit_logo">
       </a>
       <!-- nav_items -->
       <ul class="nav_items font-normal">
@@ -111,7 +113,7 @@
                 <div><img class="w-12.4 erp_icon" src="./assets/img/home_img/our_offers_icons/erp.png" alt="erp-icon">
                 </div>
                 <div>
-                  <p class="font-bold text-dark-500 text-16 flex flex-col">ERP, POS API info.
+                  <p class="font-bold text-dark-500 text-16 flex flex-col">ERP, POS API
                     <span class="font-normal text-13 mt-1.8 text-gray-400">Build your dream website</span>
 
                   </p>
@@ -279,7 +281,7 @@
 
               <!-- single nav item -->
               <a href="./website_design_and_dev.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto web_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/web.png" alt="web-icon">
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3 ">Web Design & Development
                     <span class="font-normal text-13 mt-1.8 text-gray-400">Build your dream website</span>
@@ -290,7 +292,7 @@
               <!-- single nav item -->
               <a href="./app_development.html">
                 <li class="mobile_serveice_sub_card rounded-md">
-                  <img class="w-12.4 mx-auto app_dev_icon" src="./assets/img/home_img/our_offers_icons/aappdev.png"
+                  <img class="w-12.4 mx-auto " src="./assets/img/home_img/our_offers_icons/aappdev.png"
                     alt="aappdev-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">App Development
@@ -300,7 +302,7 @@
               </a>
               <!-- single nav item -->
               <a href="./graphics_desgin.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto graphics_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/graphics.png" alt="graphics-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">Graphics Desing
@@ -310,7 +312,7 @@
               </a>
               <!-- single nav item -->
               <a href="./2dand3d.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto towd_3d_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/2d3d.png" alt="2d3d-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3 ">2D & 3D Animation
@@ -320,7 +322,7 @@
               </a>
               <!-- single nav item -->
               <a href="./software-development.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto soft_dev_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/softdev.png" alt="softdev-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">Software Development
@@ -330,17 +332,17 @@
               </a>
               <!-- single nav item -->
               <a href="./erp-seo-pos.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto erp_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/erp.png" alt="erp-icon">
 
-                  <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">ERP, POS API info.
+                  <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">ERP, POS API
                     <span class="font-normal text-13 mt-1.8 text-gray-400">Build your dream website</span>
                   </p>
                 </li>
               </a>
               <!-- single nav item -->
               <a href="./e-commerce.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto e_commerce_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/e-commerce.png" alt="e-commerce-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">E-ecommerce Website & App
@@ -350,7 +352,7 @@
               </a>
               <!-- single nav item -->
               <a href="./digital-marketing.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto digital_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/digital.png" alt="trafic-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">Digital Marketing
@@ -360,7 +362,7 @@
               </a>
               <!-- single nav item -->
               <a href="./ngo_&_banking.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto ngo_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/ngo.png" alt="ngo-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">NGO & Banking Software
@@ -370,7 +372,7 @@
               </a>
               <!-- single nav item -->
               <a href="./school-managment.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto school_management_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/school_management.png" alt="school-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">School Management System
@@ -380,7 +382,7 @@
               </a>
               <!-- single nav item -->
               <a href="./cyber-security.html">
-                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto cyber_icon"
+                <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/cyber.png" alt="cyber-icon">
 
                   <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">Cyber security
@@ -411,7 +413,6 @@
               </g>
             </g>
           </svg>
-
           <a href="./mission.html">Mission</a>
         </li>
         <li class="flex items-center gap-2">
@@ -449,6 +450,7 @@
     </nav>
   </header>
   <!-- header section  end-->
+
   <main class="root">
     <section class=" pt-14 md:pt-28.5">
       <div class="section_container">
@@ -728,7 +730,7 @@
         <!-- left -->
         <div class="company_info">
           <div class="footer_logo m-1.5	">
-            <img src="./assets/img/logo/bongoit_logo.svg" alt="bongoit-logo" />
+            <img src="./assets/img/logo/logo.png" alt="bongoit-logo" />
           </div>
           <div class="flex gap-x-2.5	 items-center  mt-7">
             <img class="w-4.7 h-4.7" src="./assets/img/home_img/footer/person.png" alt="contact-icon" />
