--- a/contact_us.html
+++ b/contact_us.html
@@ -35,7 +35,7 @@
     <nav class="header_container">
       <!-- logo -->
       <a href="./index.html" class="logo w-38.7 xssm:w-44.2">
-        <img src="./assets/img/logo/bongoit_logo.svg" alt="">
+        <img src="./assets/img/logo/logo.png" alt="bongoit_logo">
       </a>
       <!-- nav_items -->
       <ul class="nav_items font-normal">
@@ -112,7 +112,7 @@
                 <div><img class="w-12.4 erp_icon" src="./assets/img/home_img/our_offers_icons/erp.png" alt="erp-icon">
                 </div>
                 <div>
-                  <p class="font-bold text-dark-500 text-16 flex flex-col">ERP, POS API info.
+                  <p class="font-bold text-dark-500 text-16 flex flex-col">ERP, POS API
                     <span class="font-normal text-13 mt-1.8 text-gray-400">Build your dream website</span>
 
                   </p>
@@ -334,7 +334,7 @@
                 <li class="mobile_serveice_sub_card rounded-md"> <img class="w-12.4 mx-auto "
                     src="./assets/img/home_img/our_offers_icons/erp.png" alt="erp-icon">
 
-                  <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">ERP, POS API info.
+                  <p class="font-bold text-dark-500 text-16 flex flex-col text-center mt-3">ERP, POS API
                     <span class="font-normal text-13 mt-1.8 text-gray-400">Build your dream website</span>
                   </p>
                 </li>
@@ -449,6 +449,8 @@
     </nav>
   </header>
   <!-- header section  end-->
+
+
   <main class="root">
     <!-- contact header -->
     <section class=" pt-14 md:pt-28.5 ">
@@ -615,6 +617,7 @@
       <i class="fa-solid fa-arrow-up" id="scroll_btn"></i>
     </div>
   </main>
+
   <!-- footer -->
   <footer class="footer pt-10 lg:pt-29 pb-10 ">
     <div class="section_container">
@@ -622,7 +625,7 @@
         <!-- left -->
         <div class="company_info">
           <div class="footer_logo m-1.5	">
-            <img src="./assets/img/logo/bongoit_logo.svg" alt="bongoit-logo" />
+            <img src="./assets/img/logo/logo.png" alt="bongoit-logo" />
           </div>
           <div class="flex gap-x-2.5	 items-center  mt-7">
             <img class="w-4.7 h-4.7" src="./assets/img/home_img/footer/person.png" alt="contact-icon" />
@@ -734,7 +737,9 @@
 
   <script src="./assets/JS/index.js"></script>
 
+  <!-- jquery cdn-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
