--- a/mission.html
+++ b/mission.html
@@ -593,28 +593,28 @@
           <div class="long_term blue_gradient_bg2 rounded-lg pb-10 pt-7  px-4.5 lg:px-4.7 card cursor-pointer">
             <img class="w-17 mx-auto box_shadow_2" src="./assets/img/mission_page_img/objectives/handshake.png"
               alt="handshake">
-            <p class="font-medium	text-dark-500 text-18 leading-27px text-center mt-6">Establish long-term value chains
+            <p class="font-normal	text-dark-500 text-18 leading-27px text-center mt-6">Establish long-term value chains
               and partner with our customers.</p>
           </div>
           <!--performance card -->
           <div class="long_term sun_gradient_bg2 rounded-lg pb-10 pt-7  px-4.5 lg:px-4.7 card cursor-pointer">
             <img class="w-17 mx-auto box_shadow_3" src="./assets/img/mission_page_img/objectives/performance.png"
               alt="handshake ">
-            <p class="font-medium	text-dark-500 text-18 leading-27px text-center mt-6">Ensure superior performance and
+            <p class="font-normal	text-dark-500 text-18 leading-27px text-center mt-6">Ensure superior performance and
               positive business relationships. </p>
           </div>
           <!--flexibility card -->
           <div class="long_term blue_gradient_bg3 rounded-lg pb-10 pt-7  px-4.5 lg:px-4.7 card cursor-pointer">
             <img class="w-17 mx-auto box_shadow_3" src="./assets/img/mission_page_img/objectives/flexibilty.png"
               alt="handshake ">
-            <p class="font-medium	text-dark-500 text-18 leading-27px text-center mt-6">Provide flexibility to adapt to
+            <p class="font-normal	text-dark-500 text-18 leading-27px text-center mt-6">Provide flexibility to adapt to
               the changing technology and customers' demands.</p>
           </div>
           <!--comfort card -->
           <div class="long_term sun_gradient_bg3 rounded-lg pb-10 pt-7  px-4.5 lg:px-4.7 card cursor-pointer">
             <img class="w-17 mx-auto box_shadow_3" src="./assets/img/mission_page_img/objectives/comfort.png"
               alt="handshake ">
-            <p class="font-medium	text-dark-500 text-18 leading-27px text-center mt-6">We are careful about ensuring our
+            <p class="font-normal	text-dark-500 text-18 leading-27px text-center mt-6">We are careful about ensuring our
               company's employees comfortable positions.</p>
           </div>
         </div>
